[package]
name = "pizza_tower_ls_wasm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spinning_top = "0.2.3"
asr = { git = "https://github.com/LiveSplit/asr", features = ["derive", "signature", "flags"]}
once_cell = "1.17.1"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
